# embassy-rp-flash-struct

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
device-config/: .gitignore  README.md
protos/: message.proto
src/: flash.rs  gps.rs  lib.rs  main.rs  message.rs
