[package]
name = "lorawan-tracker"
version = "0.1.0"
edition = "2021"

[features]
# Blink using the GPIO pins
blink_for_pico_w = []

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal-bus = { version = "0.1.0", features = ["async"]}

defmt = "0.3.6"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "task-arena-size-65536"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "time-driver"] }
cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }

lora-phy = { version = "3.0.1-alpha.0", git = "https://github.com/ludgerheide/lora-rs", features= ["lorawan-radio"]}
lorawan = { version = "0.8.0", git = "https://github.com/ludgerheide/lora-rs", default-features = false, features = ["default-crypto"]}
lorawan-device = { version = "0.12.0", git = "https://github.com/ludgerheide/lora-rs", default-features = false, features= ["region-eu868", "defmt", "default-crypto", "embassy-time"]}

static_cell = { version = "2.0.0" }
portable-atomic = { version = "1.6.0", features = ["critical-section"] } # needed for static_cell on thumbv6
const-hex = {version = "1.11.3", default-features = false}
embedded-io-async = "0.6.1"
micromath = { version = "2.1.0", features=["num-traits"] }
nmea = { version = "0.6.0", default-features = false, features=["all-sentences"] }


femtopb = "0.4.1"

[build-dependencies]
anyhow = "1.0.82"
femtopb-build = "0.4.1"


[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true

[profile.dev]
lto = true
debug = true
