[package]
name = "embassy-rp-flash-struct"
version = "1.0.0"
edition = "2021"
categories = ["embedded", "no-std", "asynchronous"]

[dependencies]

defmt = "0.3"
embassy-rp = { version = "0.2", features = ["defmt", "time-driver"] }
bincode = { version = ">=2.0.0-rc.3, <2.1", default-features = false, features=["derive"]}

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true

